fixed issue with side stories being too large

--- a/assets/css/stocks.css
+++ b/assets/css/stocks.css
@@ -105,8 +105,8 @@ ul{
 }
 
 img{
-    width: 180px;
-    height: 70px;
+    width: 170px;
+    height: 50px;
     
 }
 
@@ -147,6 +147,8 @@ table {
   th {
     height: 50px;
   }
+
+  
 
 
 
